Thu Oct  6 16:11:56 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        *
          DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:

          Added more debug statements and also comments in the code.

Thu Oct  6 15:32:41 CDT 2005 Stoyan Paunov spaunov@isis.vanderbilt.edu


	* DAnCE/spec_RepositoryManager/PC_Updater.cpp
	* DAnCE/spec_RepositoryManager/PC_Updater.h
	* DAnCE/spec_RepositoryManager/PC_Updater_T.cpp
	* DAnCE/spec_RepositoryManager/PC_Updater_T.h

	Added these files which implement a PackageConfiguration visitor. 
	The visitor helps deal with the internal complexity of the PackageConfiguration
	and helps preseve my sanity ;)

	* DAnCE/spec_RepositoryManager/RepositoryManager_Impl.cpp
	* DAnCE/spec_RepositoryManager/RepositoryManager_Impl.h
	* DAnCE/spec_RepositoryManager/ZIP_Wrapper.cpp
	* DAnCE/spec_RepositoryManager/ZIP_Wrapper.h

	Some more code. With this the package distribution part of the RM 
	is ready. I still need to clean up a few details. This is coming soon.


Thu Oct  6 15:05:30 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp:

          Added debug statements and comments.

Thu Oct  6 14:26:31 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/ExecutionManager/DAM_Map.cpp:
        * DAnCE/ExecutionManager/Execution_Manager_Impl.cpp:
        * DAnCE/Plan_Launcher/DAM_Map.cpp:
        * DAnCE/Plan_Launcher/Plan_Launcher.cpp:
        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.cpp:
        * ciao/Container_Impl.cpp:
        * ciao/NodeApplication_Impl.cpp:
        * ciao/Servant_Activator.cpp:

          Fixed the debug statements to look for critical levels
          no more than 9.

Thu Oct  6 14:00:16 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * ciao/Container_Base.cpp:
        * ciao/Container_Impl.cpp:

          Added debug messages and comments.

Thu Oct  6 12:30:40 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>
